[package]
authors = ["Raí Siqueira <rai.siqueira@justa.com.vc>"]
edition = "2018"
name = "lit-html-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js = "0"
lit-html = "0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
